--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,12 +1,23 @@
 *{
     box-sizing: border-box;
-}
-
-body, html{
-
+  }
+  
+  body, html{
+  
     background-color: #1E3A5F !important; 
     width: 100% !important;
     height: auto;
     max-width: 100vw !important;
     min-height: 100vh !important;
-}
+  }
+
+  .spinner-border {
+    width: 4rem;
+    height: 4rem;
+  
+  }
+  .loading-text {
+    font-size: 1.5rem;
+    font-weight: 900;
+    color: white;
+  }
